Se agrega docker-compose.yml, scripts de base de datos, clases entity e interfaces repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.servlet.context-path=/app
+server.port=7575
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/hulk_store_db
+spring.datasource.username=admin
+spring.datasource.password=lclalf21
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+logging.level.root=info
+logging.level.org.hibernate=info
+logging.level.org.springframework.web=warn
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
