--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3.8'
 services:
   db:
     image: postgres:15.2
-    container_name: best_travel
+    container_name: hulk_store
     restart: always
     volumes:
       - ./db/sql/create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql
       - ./db/sql/data.sql:/docker-entrypoint-initdb.d/data.sql
     environment:
-      - POSTGRES_DB=best_travel
-      - POSTGRES_USER=hernan
+      - POSTGRES_DB=hulk_store_db
+      - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=lclalf21
     ports:
       - "5432:5432"
