Se agrega capa de servicios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/app
+server.servlet.context-path=/hulkstore/app
 server.port=7575
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/hulk_store_db
