--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.iuvity</groupId>
     <artifactId>iuvity</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>iuvibnaking</name>
+    <name>iuvibanking</name>
     <description>Hulk Store project</description>
     <properties>
         <java.version>17</java.version>
